--- a/resources/packages/bridge/src/routes/bridge.css
+++ b/resources/packages/bridge/src/routes/bridge.css
@@ -17,7 +17,7 @@
 	position: absolute;
 	top: 8px;
 	right: 8px;
-	z-index: 16777272;
+	z-index: 1;
 }
 
 .helm-bridge__config-trigger {
